<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zangfengshun.bestsushibar.MainActivity"
    android:background="@android:color/darker_gray">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:id="@+id/image"
        android:src="@drawable/sushi_view"
        android:scaleType="centerCrop"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/header_text"
        android:textSize="36sp"
        android:layout_margin="15dp"
        android:textColor="@android:color/holo_red_dark"
        android:fontFamily="cursive"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:text="@string/phone"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="@dimen/side_margin"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/black"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/web"
        android:text="@string/web"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/side_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:text="@string/address"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/side_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:background="@android:color/holo_green_light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/text_size"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="180dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:fontFamily="sans-serif-condensed"
        android:background="@android:color/holo_orange_light"/>
</RelativeLayout>
